@@ -27,7 +27,7 @@ import java.text.MessageFormat;
  * (using the minSize/maxSize properties).
  *
  * @author Pierre van Rooden
- * @version $Id: TypeMapping.java,v 1.6 2007-02-24 21:57:50 nklasens Exp $
+ * @version $Id: TypeMapping.java,v 1.7 2007-02-25 17:56:59 nklasens Exp $
  * @since MMBase-1.7
  */
 public class TypeMapping implements Comparable<TypeMapping> {
@@ -113,7 +113,7 @@ public class TypeMapping implements Comparable<TypeMapping> {
      * Returns the mappings type.
      */
     public String getType(int size) {
-        return MessageFormat.format(type,new Object[]{ new Integer(size) });
+        return MessageFormat.format(type,new Object[]{ Integer.valueOf(size) });
     }
 
     // javadoc inherited
